<resources>
    <string name="app_name">BaseHQ</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_image">product image</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logo">logo</string>
    <string name="price">$%f</string>
    <string name="description">Description</string>
    <string name="remove">Remove</string>
</resources>